# textolab-es

./: .gitignore  LEEME.md  README.md  pyproject.toml
ejemplos/: manifiesto_hidroespacial.txt
textolab/: __init__.py  cli.py  describe.py  markov_babbler.py  phraser.py  sample.py  structure.py
textolab/.ipynb_checkpoints/: markov_babbler-checkpoint.ipynb  phraser-checkpoint.ipynb  structure-checkpoint.ipynb
